--- a/index.html
+++ b/index.html
@@ -12,8 +12,8 @@
     <h1 align="center">Doctor Strange</h1>
     <h2>Imagenes del Doctor Strange</h2>
     <div align="center">
-    <img src="str.png" alt="Doctor Strange" width="250px" height="330px">
-    <img src="mag.png" alt="Doctor Strange Magia" width="420px" height="330px">
-    <img src="gem.png" alt="Doctor Strange con la Gema del Tiempo" width="490px" height="330px">
+    <img src="I1.jpeg" alt="Doctor Strange" width="250px" height="330px">
+    <img src="I2.jpeg" alt="Doctor Strange Magia" width="420px" height="330px">
+    <img src="I3.jpeg" alt="Doctor Strange con la Gema del Tiempo" width="490px" height="330px">
     </div>
 </html>
