--- a/index.html
+++ b/index.html
@@ -9,8 +9,9 @@
     <script src='main.js'></script>
 </head>
 <body>
-    <h1 align="center">Doctor Strange</h1>
-    <h2>Imagenes del Doctor Strange</h2>
+    <body style="background-color: rgb(212, 110, 243);"></body>
+    <i><h1 align="center">Enredados</h1></i>
+    <i><h2>Rapuncell:</h2></i>
     <div align="center">
     <img src="I1.jpeg" alt="Doctor Strange" width="250px" height="330px">
     <img src="I2.jpeg" alt="Doctor Strange Magia" width="420px" height="330px">
