--- a/index.html
+++ b/index.html
@@ -3,18 +3,73 @@
 <head>
     <meta charset='utf-8'>
     <meta http-equiv='X-UA-Compatible' content='IE=edge'>
-    <title>Page Title</title>
+    <title>Enredados</title>
     <meta name='viewport' content='width=device-width, initial-scale=1'>
     <link rel='stylesheet' type='text/css' media='screen' href='main.css'>
     <script src='main.js'></script>
 </head>
 <body>
-    <body style="background-color: rgb(212, 110, 243);"></body>
+    <body style="background-color: rgb(216, 181, 226);"></body>
     <i><h1 align="center">Enredados</h1></i>
-    <i><h2>Rapuncell:</h2></i>
+    <i><h2>Imagenes de la princesa Rapunzel:</h2></i>
     <div align="center">
-    <img src="I1.jpeg" alt="Doctor Strange" width="250px" height="330px">
-    <img src="I2.jpeg" alt="Doctor Strange Magia" width="420px" height="330px">
-    <img src="I3.jpeg" alt="Doctor Strange con la Gema del Tiempo" width="490px" height="330px">
+    <img src="I1.jpeg" alt="Rapunzel" width="250px" height="330px">
+    <img src="I2.jpeg" alt="Más Rapunzel" width="420px" height="330px">
+    <img src="I3.jpeg" alt="Rapunzel y su enamorado" width="490px" height="330px">
     </div>
+    <div>
+        <br>
+        <br>
+        <h2>Videos de Rapunzel</h2>
+        <video width="420" height="340" controls>
+            <source src="V1.mp4" type="video/mp4">
+        </video>
+        <video width="420" height="340" controls>
+            <source src="V2.mp4" type="video/mp4">
+        </video>
+        <video width="420" height="340" controls>
+            <source src="V3.mp4" type="video/mp4">
+        </video>
+    </div>
+    <div>
+        <br>
+        <br>
+        <h2>Audios de Rapunzel</h2>
+        <h3>Rapunzel - Veo en ti luz:</h3>
+        <audio controls>
+            <source src="A1.mp3" type="audio/mpeg">
+        </audio> <br>
+        <h3>Rapunzel - ¿Cuando empezare a vivir?:</h3>
+        <audio controls>
+            <source src="A2.mp3" type="audio/mpeg">
+        </audio> <br>
+        <h3>Rapunzel - Mi sueño ideal:</h3>
+        <audio controls>
+            <source src="A3.mp3" type="audio/mpeg">
+        </audio> <br>
+    </div>
+    <div>
+        <br>
+        <br>
+        <h2>Información sobre Rapunzel</h2>
+        <p>Rapunzel es una princesa de Disney que protagoniza la película "Enredados". Es conocida por su largo cabello mágico que tiene el poder de curar y otorgar juventud. La historia de Rapunzel se basa en un cuento de hadas de los hermanos Grimm, donde una joven es encerrada en una torre por una bruja malvada. A lo largo de la película, Rapunzel descubre su verdadera identidad como princesa y encuentra el amor con un ladrón llamado Flynn Rider. La película destaca temas como la libertad, el autodescubrimiento y la importancia de seguir tus sueños.</p> <br>
+        <p>Flynn rider, el más buscado y encantador bandido del reino, se esconde en una misteriosa torre y allí se encuentra con Rapunzel, una bella y avispada adolescente con una cabellera dorada de 21 metros de largo, que vive encerrada allí desde hace años. Ambos sellan un pacto, y a partir de ese momento la pareja vivirá emocionantes aventuras en compañía de un caballo superpolicía, un camaleón sobreprotector y una ruda pandilla de matones.
+    </div>
+    <div>
+        <br>
+        <br>
+        <h2>Frases de Rapunzel</h2>
+        <ul>
+            <li>"Veo en ti luz, veo en ti amor, veo en ti todo lo que soñé".</li>
+            <li>"Cuando empiece a vivir, cuando empiece a vivir, no habrá nada que me pueda detener".</li>
+            <li>"Mi sueño ideal es un mundo sin final, donde pueda volar y ser feliz".</li>
+            <li>"No importa lo que digan los demás, yo sé quién soy y lo que quiero".</li>
+            <li>"La libertad es el regalo más grande que podemos tener".</li>
+        </ul>
+    </div>
+    <br>
+    <div>
+    <a href="https://es.wikipedia.org/wiki/Enredados" target="_blank">Más información sobre Rapunzel</a>
+    </div>
+</body>
 </html>
