--- a/index.html
+++ b/index.html
@@ -9,6 +9,13 @@
     <script src='main.js'></script>
 </head>
 <body>
+    <style>
+        body{
+            margin: 50px;
+            background-color: black;
+            font-family: Arial,sans-serif;
+        }
+    </style>
     <body style="background-color: rgb(216, 181, 226);"></body>
     <i><h1 align="center">Enredados</h1></i>
     <i><h2>Imagenes de la princesa Rapunzel:</h2></i>
